--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+      <title>test1.0</title>
       <meta http-equiv="Content-Security-Policy" content="default-src 'self' gap:; script-src 'self' data: https://ssl.gstatic.com 'unsafe-eval'; object-src *; style-src 'self' data: 'unsafe-inline'; img-src 'self' data:; media-src 'self' data:; font-src 'self' data:; connect-src *">
 </head>
 <body>
