--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
-      <title>test1.0</title>
-      <meta http-equiv="Content-Security-Policy" content="default-src 'self' gap:; script-src 'self' data: https://ssl.gstatic.com 'unsafe-eval'; object-src *; style-src 'self' data: 'unsafe-inline'; img-src 'self' data:; media-src 'self' data:; font-src 'self' data:; connect-src *">
+      <title>test1.1</title>
+   <meta http-equiv="Content-Security-Policy" style-src 'unsafe-inline'">
 </head>
 <body>
   <form name="input" method="post" action="https://api.github.com/repos/Benbentwo/SampleGithubPage/issues" >
