--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
    <meta http-equiv="Content-Security-Policy" style-src 'unsafe-inline'">
 </head>
 <body>
-  <form name="input" method="post" action="https://api.github.com/repos/Benbentwo/SampleGithubPage/issues" >
+<!--   <form name="input" method="post" action="https://api.github.com/repos/Benbentwo/SampleGithubPage/issues" > -->
+  <form name="input" method="post" action="UserAction()">
     <br>
-    <input type="text" name="title" placeholder="Issue Title" />
+    <input type="text" name="title" placeholder="Issue Title" id="title" />
     <br>
     <br><br>
-    <textarea name="body" placeholder="Issue Description"></textarea>
+    <textarea name="body" placeholder="Issue Description" id="desc" ></textarea>
     <br>
     <br>
-    <input type="submit" value="Submit" />
+    <input type="submit" onclick="UserAction()" value="Submit" />
   </form>
 </body>
