--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <head>
-      <title>test1.2</title>
+      <title>test1.3</title>
    <meta http-equiv="Content-Security-Policy" style-src 'unsafe-inline'">
 </head>
 <body>
 <!--   <form name="input" method="post" action="https://api.github.com/repos/Benbentwo/SampleGithubPage/issues" > -->
-  <form name="input" method="post" action="UserAction()">
+  <form name="input" method="post" >
     <br>
     <input type="text" name="title" placeholder="Issue Title" id="title" />
     <br>
