--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <head>
-      <title>test1.3</title>
+      <title>test1.4</title>
    <meta http-equiv="Content-Security-Policy" style-src 'unsafe-inline'">
 </head>
 <body>
+<script src="apiCall.js"></script>
 <!--   <form name="input" method="post" action="https://api.github.com/repos/Benbentwo/SampleGithubPage/issues" > -->
   <form name="input" method="post" >
     <br>
