--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
-      <title>test1.4</title>
-   <meta http-equiv="Content-Security-Policy" style-src 'unsafe-inline'">
+      <title>test1.5</title>
+<!--    <meta http-equiv="Content-Security-Policy" style-src 'unsafe-inline'"> -->
 </head>
 <body>
 <script src="apiCall.js"></script>
